# discord-pipe

./: CLAUDE.md  Cargo.toml  README.md
docs/: brainstorm-2026-03-20.md
docs/plans/: 2026-03-20-implementation.md
src/: ansi.rs  batcher.rs  format.rs  main.rs  ndjson.rs  reader.rs  sender.rs
tests/: integration.rs
