[package]
name = "discord-pipe"
version = "0.1.0"
edition = "2021"
description = "Generic CLI output batcher that collates chatty stdout/stderr to Discord webhooks"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
ctrlc = "3.5"
dotenvy = "0.15"
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "3.2"

[dev-dependencies]
tempfile = "3.27"
